--- a/installscripts/install
+++ b/installscripts/install
@@ -28,6 +28,10 @@ case "${os_type}" in
 
         ./install || true
 
+        if [ ! -f ~/tmux-sessions.json ]; then
+            cp ../scripts/tmux-sessions.example.json ~/tmux-sessions.json
+        fi
+
         mkdir -p ~/.local/share/nvim/databases && touch ~/.local/share/nvim/databases/telescope_history.sqlite3
 
         if [ ! -d "$HOME/.nvm" ]; then
