--- a/install
+++ b/install
@@ -9,13 +9,6 @@ case "${os_type}" in
     Linux*)
         os_type="Linux"
         if [ -f "/etc/debian_version" ]; then
-            ./install_dotbot || true
-            read -rep $'Do you want to do the symlinks for the root user?(y)' y
-            case "${y}" in
-                [Yy]*)
-                    sudo ./install_dotbot || true
-                    ;;
-            esac
             sudo apt update
             sudo apt install -y git ninja-build gettext cmake unzip curl build-essential zsh fd-find tmux fzf grep ripgrep mysql-server mysql-client sqlite3 jq python3
             if ! command -v nvim &> /dev/null;
@@ -30,11 +23,19 @@ case "${os_type}" in
                     sudo apt install -y php8.2 php8.2-zip php8.2-curl php8.2-gd php8.2-xml php8.2-sqlite3 php8.2-mysql php8.2-mbstring php8.2-xdebug php7.4 php7.4-zip php7.4-curl php7.4-gd php7.4-xml php7.4-sqlite3 php7.4-mysql php7.4-mbstring php7.4-xdebug
                 fi
             fi
+            ./install_dotbot || true
+            read -rep $'Do you want to do the symlinks for the root user?(y)' y
+            case "${y}" in
+                [Yy]*)
+                    sudo ./install_dotbot || true
+                    ;;
+            esac
 
         elif grep -q '^ID=arch' /etc/os-release; then
+            sudo pacman -Sy --needed python
             ./install_dotbot || true
             sudo ./install_dotbot || true
-            sudo pacman -S --needed - < /etc/pkglist.txt
+            sudo pacman -Sy --needed - < /etc/pkglist.txt
             nvim --headless \"+Lazy! sync\" +qa;
         fi
 
