🐛 fixed nvm install

--- a/install
+++ b/install
@@ -44,7 +44,12 @@ if [ ! -f ~/.local/share/nvim/databases/telescope_history.sqlite3 ]; then
 fi
 
 if [ ! -d "$HOME/.nvm" ]; then
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \\. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \\. "$NVM_DIR/bash_completion" && nvm install v20.18.0;
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \\. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \\. "$NVM_DIR/bash_completion";
+fi
+
+if command -v nvm &> /dev/null;
+then
+    nvm install v20.18.0
 fi
 
 if command -v npm &> /dev/null;
